# chat.buro.earth

./: .gitignore  Dockerfile  docker-compose.yml  index.html  pyproject.toml
chatburo/: app.py  db.py  rendering.py  settings.py  text_render.py  utils.py
chatburo/static/: chatburo.css  chatform.html  index.html
chatburo/templates/: index.html
